-1 draft of text in, figures to come.

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -19540,3 +19540,63 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Farr:2018,
+   author = {{Farr}, B. and {Holz}, D.~E. and {Farr}, W.~M.},
+    title = "{Using Spin to Understand the Formation of LIGO and Virgo{\rsquo}s Black Holes}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1709.07896},
+ primaryClass = "astro-ph.HE",
+ keywords = {binaries: general, gravitational waves, methods: data analysis, stars: black holes },
+     year = 2018,
+    month = feb,
+   volume = 854,
+      eid = {L9},
+    pages = {L9},
+      doi = {10.3847/2041-8213/aaaa64},
+   adsurl = {http://adsabs.harvard.edu/abs/2018ApJ...854L...9F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Renzo:2017,
+   author = {{Renzo}, M. and {Ott}, C.~D. and {Shore}, S.~N. and {de Mink}, S.~E.
+	},
+    title = "{Systematic survey of the effects of wind mass loss algorithms on the evolution of single massive stars}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1703.09705},
+ primaryClass = "astro-ph.SR",
+ keywords = {stars: evolution, stars: massive, stars: mass-loss, stars: winds, outflows, supernovae: general},
+     year = 2017,
+    month = jul,
+   volume = 603,
+      eid = {A118},
+    pages = {A118},
+      doi = {10.1051/0004-6361/201730698},
+   adsurl = {http://adsabs.harvard.edu/abs/2017A%26A...603A.118R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{deMinkKing:2017,
+   author = {{de Mink}, S.~E. and {King}, A.},
+    title = "{Electromagnetic Signals Following Stellar-mass Black Hole Mergers}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1703.07794},
+ primaryClass = "astro-ph.HE",
+ keywords = {binaries: close, black hole physics, gravitational waves, X-rays: general},
+     year = 2017,
+    month = apr,
+   volume = 839,
+      eid = {L7},
+    pages = {L7},
+      doi = {10.3847/2041-8213/aa67f3},
+   adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...839L...7D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@Misc{WenPhinney:2018,
+     author    = {{Wen}, L. and {Phinney}, E.S.},
+     year      = 2018,
+     note      = "In preparation"
+}
