--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -233,28 +233,17 @@ Population statistics will generally contain more information than individual ev
 
 We can look for clustering of events by observed parameters in the hope of finding distinct clusters of systems corresponding to different subpopulations or evolutionary channels.  \citet{Mandel:2015} argued that $\sim 60$ observations would make it possible to cluster events by mass even after allowing for the significant measurement uncertainties inherent in gravitational-wave astronomy, and \citet{Mandel:2016cluster} demonstrated the feasibility of a particular clustering technique.  Meanwhile, \citet{Farr:2018} propose classifying binary black hole mergers by spin misalignment angle into aligned and isotropically distributed subpopulations.  It's worth noting that such clustering or classification schemes cannot hope to correctly assign individual events to a specific cluster, which is generally impossible given the significant measurement uncertainties \citep{Littenberg:2015}; instead, the goal is to measure the relative frequencies of events in different categories.
 
-The next level of population-based inference relies on assuming that precise, possibly parametrized, subpopulation distributions are known to determine the ratios of different subpopulations (e.g., arising from different formation channels), typically using hierarchical modeling \citep[extreme deconvolution in the language of][]{Hogg:2011}.  \citet{Zevin:2017} found that the mass distribution alone could be used to determine the formation channel with $\sim 100$ observations, assuming trustworthy models of the mass distribution under different formation channels are available.  \citet{Vitale:2017,Stevenson:2017spin} carry out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels through hierarchical modelling if the distributions under different channels are known \citep{Stevenson:2017spin}.   
+The next level of population-based inference relies on assuming that precise, possibly parametrized, subpopulation distributions are known to determine the ratios of different subpopulations (e.g., arising from different formation channels), typically using hierarchical modeling \citep[extreme deconvolution in the language of][]{Hogg:2011}.  \citet{Zevin:2017} found that the mass distribution alone could be used to determine the formation channel with $\sim 100$ observations, assuming trustworthy models of the mass distribution under different formation channels are available.  \citet{Vitale:2015,Stevenson:2017spin} carry out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels through hierarchical modelling if the distributions under different channels are known \citep{Stevenson:2017spin}.   
 
 Of course, there is a multitude of uncertain physics within a given model.  How much mass do stars lose in winds, and what is the precise impact of metallicity and rotation on stellar evolution \citep[e.g.,][]{Renzo:2017}?  What happens to the star's angular momentum during collapse, how much mass is ejected, and how much of an asymmetric kick does the star receive \citep[e.g.,][]{Mirabel:2016}? How conservative is mass transfer in binaries and how much angular momentum is carried away by the mass lost from the binary during non-conservative mass transfer \citep[e.g.,][]{vandenHeuvel:2017}?  What are the conditions for the onset of a common-envelope phase and the common envelope ejection, and how does the binary change in the process \citep[e.g.,][]{Ivanova:2013}?   How do dynamical interactions affect binary evolution?  And, in turn, how do massive stellar binaries and their compact remnants feed back into astrophysics and cosmology on all scales?
 
-One approach to addressing these big questions is to use the framework of population synthesis, which makes it possible to include uncertain parameters
+One approach to addressing these big questions is to use the framework of population synthesis, which makes it possible to parametrize the uncertain physics and predict the expected source rates and distributions under different models.  Early  efforts relied on a discrete set of a few models in the parameter space of population synthesis assumptions \citep{Dominik:2012,Stevenson:2015}.  Even with the low computational cost of population synthesis, it is not feasible to explore more than a few tens to a few hundred models, which is not sufficient to explore the full parameter space or consider the correlations between model parameters.  However, recent successes in building accurate and computationally efficient emulators over the model parameter space \citep{Barrett:2017} suggest that a full exploration of this space will soon be possible. \citet{Barrett:2017FIM} applied Fisher information matrix techniques to the space of model parameters and found that parameters such as mass loss rates during the Wolf-Rayet phase and common envelope energetics can be measured to the level of a few percent with a thousand detections. 
 
- incorporate parameters for the 
-Within model: \citep{Barrett:2017}
+More observational data sets will further aid in interpreting gravitational-wave observations.  Future missions raise the prospect of observing evolution of populations of merging binaries -- or event individual systems -- across a broad band of gravitational-wave frequencies, from the millihertz \citep[e.g.,[]{Sesana:2016} through the decihertz \citep{Mandel:2017} and hertz \citep{ET:2012} to the LIGO/Virgo band.  Although electromagnetic transients are not broadly expected to be associated with binary black hole mergers \citep[e.g.,][]{Lyutikov:2016}, any such observations would indicate the persistence of material around the merging binary \citep[e.g.,][]{deMinkKing:2017}.  \todo{More details -- brief summary of Lorentz center workshop?}
 
+The most useful additional constraints, however, are likely to come from comparing other data sets with gravitational-wave observations and demanding that any evolutionary model must self-consistently explain all of the available data: gravitational-wave observations, X-ray binaries, Galactic neutron stars, gamma ray bursts, supernovae, luminous red novae, etc.   Incorporating these constraints will make it possible to resolve these degeneracies and build a concordance model of massive binary evolution.  \todo{Other possible gravitational-wave sources? More details / references on XRBs, LRN, etc.?}
 
-Detectability of gravitational waves with LIGO and LISA 
-Einstein telescope
-
-Implications of gravitational-wave detections: addressing the inverse problem of massive binary evolution  [including unmodeled]
-
-EM observations -- brief summary of Lorentz center workshop?
-
-%Other possible gravitational-wave sources
-
-Other input data points.  Concordance model.
-
-GW paleontology
+The future of gravitational-wave astronomy holds the prospect of addressing the inverse problem of massive binary evolution: inferring the formation channels and their physics from observations of the merging compact-object binary population.  Like a paleontologist who uses her knowledge of anatomy to determine the appearance, eating habits, and even behaviour of extinct dinosaurs from their skeletal remnants, we can now use merging neutron stars and black holes ? remnants of massive stars ? to probe the behaviour of those stars, and particularly their evolution in binaries \citep{MandelFarmer:2017}.   With the data to come and the theoretical developments underway, this future is brightly chirping indeed!
 
 
 \begin{acknowledgements}
