--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -109,6 +109,13 @@ GW150914 has the heaviest black holes, allowing the total mass $M \equiv M_1 + M
 
 \todo {Add newest detections.  Table?  Better yet, figure, including XRBs and uncertainties?}
 
+\begin{figure}
+	\centering
+	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
+	\includegraphics[width=0.7\textwidth]{BHmass.png}
+	\caption{\label{fig:BHmasses} \todo{Placeholder for future figure showing the masses of black holes observed as gravitational-wave sources and XRBs, with error bars computed from partially available LIGO posteriors and from \citep{Farr:2011}.  Cite in text.}}
+\end{figure}
+
 Individual black hole spins are difficult to measure precisely with gravitational waves.  However, we do know that none of the observed binaries could have large spins aligned with the orbital angular momentum; in fact the averaged dimensionless spin in the direction of the orbital angular momentum is below $0.4$ for all three events, and consistent with zero for GW150914 and LVT151012.  Interestingly, it is not consistent with zero for GW151226, the lightest binary black hole detected, indicating that at least one of the components for that event must have been a rotating Kerr black hole.  Spin projections in the orbital plane are very poorly constrained for all three events.
 
 All signals came from distances of around 500 Mpc to 1 Gpc (redshifts $z\sim 0.1$ -- $0.2$).  With just two operational detectors, LIGO Hanford and LIGO Livingston, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky, making associations with specific host galaxies impossible.
@@ -150,15 +157,29 @@ Compact object masses in double compact object binaries are set by the mass of t
 
 The answer has to do with the mass loss from massive stars.  The intense radiation from these stars -- they may have luminosities of order a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star.  Metals like iron, with their many absorption lines, are particularly efficient at capturing the radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity, is a key ingredient in determining stellar winds.  Although wind models are uncertain \citep[e.g.,][]{Vink,Renzo:2017}, simulations suggest that at the metallicity of our solar neighborhood (where roughly 2\% of the stellar matter by mass are metals -- elements heavier than hydrogen and helium, formed by earlier stellar generations rather than during the Big Bang), the maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2011,Spera:2015}.  This matches the observations described in the previous section.  Thus, forming heavier black holes requires stellar progenitors born in regions with lower metallicity, that is, fewer preceding stellar generations.  This might either involve low-mass metal-poor galaxies, or formation in the very distant past with a long delay time between star formation and the relatively local black hole mergers \citep{Belczynski:2016}, but more on that below.
 
-\todo{Explicitly cite examples of previous heavy BBH predictions -- e.g., Dominik et al.?  Include mass plots from Ben, or reuse Chris's old plot?}
+\begin{figure}
+	\centering
+	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
+	\includegraphics[width=0.7\textwidth]{BHremnant.png}
+	\caption{\label{fig:BHremnant} Remnant black hole mass for a given zero-age main sequence stellar mass in the absence of an interacting binary companion, following the default COMPAS prescription for winds and supernova \citep{Stevenson:2017} (courtesy of S.~Stevenson).  \todo{Toss out? If keep, update and cite in text.}}
+\end{figure}
+%\todo{Include mass plots from Ben, or reuse Chris's old plot?, or attached?}
 
 The more surprising question, and perhaps the key problem of gravitational-wave astronomy, is why compact object binaries ever merge at all.  And this one boils down to separation.  
 
-Gravitational-wave emission is a very strong function of separation.  Gravitational waves can certainly remove a lot of energy very quickly: the peak gravitational-wave luminosity during a compact binary merger is a few thousandth of the Planck luminosity, $c^5/G$ \citep[e.g.,][]{Cardoso:2018}; at nearly $10^{57}$ erg per second, such mergers 'outshine' all the stars in the visible Universe combined.  But gravitational-wave luminosity is inversely proportional to the fifth power of the binary separation \citep{Peters:1964}, so widely separated binaries lose energy and inspiral very slowly.  \autoref{fig:Tmerge} shows the maximum periapsis separation that a binary composed of two equal-mass compact objects can have and still merge within the age of the Universe.  Thirty-solar mass double black holes such as those responsible for GW150914 would have had to start with a separation of less than 50 solar radii, or a quarter of the distance from the Earth to the Sun, if they were to be driven to merger by gravitational-wave emission alone.
+Gravitational-wave emission is a very strong function of separation.  Gravitational waves can certainly remove a lot of energy very quickly: the peak gravitational-wave luminosity during a compact binary merger is a few thousandth of the Planck luminosity, $c^5/G$ \citep[e.g.,][]{Cardoso:2018}; at nearly $10^{57}$ erg per second, such mergers 'outshine' all the stars in the visible Universe combined.  But gravitational-wave luminosity is inversely proportional to the fifth power of the binary separation \citep{Peters:1964}, so widely separated binaries lose energy and inspiral very slowly.  \autoref{fig:periapsis} shows the maximum periapsis separation that a binary composed of two equal-mass compact objects can have and still merge within the age of the Universe.  Thirty-solar mass double black holes such as those responsible for GW150914 would have had to start with a separation of less than 50 solar radii, or a quarter of the distance from the Earth to the Sun, if they were to be driven to merger by gravitational-wave emission alone.
 
-On the other hand, massive stars expand.  Even our Sun will reach the size of an astronomical unit during its giant phase; the more massive stars that make neutron stars (around 8 to 20 solar masses at birth) and black holes (above 20 solar masses at birth) may reach sizes of thousands of solar radii at their maximal extent, as shown in \autoref{Fig:Rmax}.  Thus, we appear to have an insurmountable problem.  If the stars start out at the separations where gravitational waves could bring their remnants together, the stars will exceed this separation during their evolution and merge long before they collapse into compact objects. If they start sufficiently far apart to avoid this merger while they are still stars, they would require millions of times longer than the age of the Universe to merge, so we could never detect such mergers.  The problem is even worse for double neutron stars than double black holes: because the merger timescale is inversely proportional to the cube of the masses, the double neutron stars must be separated by less than 5 solar radii to merge in the age of the Universe, meaning that, even at birth, their progenitor stars could not fit into a binary of this size.  Thus, we are not so much fitting a square peg into a round hole as fitting a peg into a hole that is around a hundred times too small for the peg!
+On the other hand, massive stars expand.  Even our Sun will reach the size of an astronomical unit during its giant phase; the more massive stars that make neutron stars (around 8 to 20 solar masses at birth) and black holes (above 20 solar masses at birth) may reach sizes of thousands of solar radii at their maximal extent, as shown in \autoref{fig:Rmax}.  Thus, we appear to have an insurmountable problem.  If the stars start out at the separations where gravitational waves could bring their remnants together, the stars will exceed this separation during their evolution and merge long before they collapse into compact objects. If they start sufficiently far apart to avoid this merger while they are still stars, they would require millions of times longer than the age of the Universe to merge, so we could never detect such mergers.  The problem is even worse for double neutron stars than double black holes: because the merger timescale is inversely proportional to the cube of the masses, the double neutron stars must be separated by less than 5 solar radii to merge in the age of the Universe, meaning that, even at birth, their progenitor stars could not fit into a binary of this size.  Thus, we are not so much fitting a square peg into a round hole as fitting a peg into a hole that is around a hundred times too small for the peg!
 
-\todo{Update left panel of plot to show periapsis on horizontal axis.  Take max radial extent plot from Simon?}
+\begin{figure}
+	\centering
+	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
+	\includegraphics[width=0.45\textwidth]{M-rp.png}
+	\includegraphics[width=0.45\textwidth]{StellarExpansion.png}
+	\caption{Maximum initial periapsis separation that a binary black hole with equal-mass components (as given on the ordinate) can have to merge in the age of the Universe through gravitational-wave emission.	\label{fig:periapsis}  Right panel (courtesy of C.~Neijssel): maximal stellar extent during various phases of stellar evolution for a non-rotating star with a given initial mass. \label{fig:Rmax} Progenitors of binary black holes grow too large to fit into a binary that would merge through gravitational-wave radiation reaction without engaging in mass transfer first. \todo{Clean up right panel.  Metallicity?}}
+\end{figure}
+
+%\todo{Update left panel of plot to show periapsis on horizontal axis.  Take max radial extent plot from Simon?}
 
 So, how can we overcome this problem of separations, which one grandly label the Fundamental Problem of Gravitational-wave Astrophysics?  After a bit of thought, three possibilities come to mind: (i) fine-tune binary evolution so that the two stars are brought closer together after they have expanded; (ii) wave a magic want and chant ``Abracadabra! Stars, thou shalt not expand!''; (iii) let the stars expand and form black holes in isolation, and only bring them together after they have done so.  Crazy as these may sound, they all might plausibly contribute to the formation of binary black holes, as we discuss below.  [We won't discuss the proposed fragmentation of a single stellar core into two black holes \citep{Loeb:2016} -- \citet{Woosley:2016,Dai:2016} discuss the problems with this picture -- or non-astrophysical formation scenarios such as primordial black holes of cosmological origin \citep[e.g.,][]{Kamionkowski}.]
 
@@ -166,7 +187,14 @@ So, how can we overcome this problem of separations, which one grandly label the
 
 The first possible channel is perhaps the most studied one, with the first mention coming as early as \citet{TutukovYungelson:1973}.  In this channel, the two stars are born in a relatively wide binary, allowing them space to expand.  However, at a critical moment, the binary is hardened by a factor of two or more orders of magnitude through dynamically unstable mass transfer, known as a common envelope phase, allowing the compact object binary to ultimately merge through gravitational-wave emission.  This channel has been studied at length over the past 40 years, with significant contributions coming from \citet{TutukovYungelson:1993,Lipunov:1997,BetheBrown:1998,DeDonderVanbeveren:2004,Nelemans:2003,VossTauris:2003,Pfahl:2005,Dewi:2006,Kalogera:2007,OShaughnessy:2008,Dominik:2012,Dominik:2014, Belczynski:2016,EldridgeStanway:2016} and many others.  Rather than summarizing all of the steps and challenges in massive binary evolution (see the papers above and the review by \citet{PostnovYungelson:2014} for details), we will illustrate the possible formation of a binary using a simulation from the COMPAS binary population synthesis code \citep{Stevenson:2017} that leads to the formation of a GW150914-like merging system.
 
-The evolution of this system is sketched out in an van den Heuvel -- style diagram in \autoref{Fig:COMPAS}.  Two massive stars of perhaps $100$ and $75$ solar masses are born in a low-metallicity environment ($\sim 5\%$ of solar metallicity)  binary at a separation of $\sim 10$ AU.  The more massive primary reaches the end of its main sequence first.  At this stage, it has completed fusing hydrogen into helium in the core, and with the loss of energy input, the core begins to contract.  The release of gravitational binding energy and the onset of hydrogen shell burning cause the hydrogen-rich envelope to expand, until the primary expands past the L1 point and overflows its Roche Lobe, beginning to transfer mass onto the secondary.  The mass transfer proceeds on the thermal timescale of the primary donor and is likely significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate it is being donated.  The loss of mass from the binary further widens the system, to perhaps $\sim 20$ AU.  The primary loses its entire envelope, leaving behind a naked helium-burning star -- a Wolf-Rayet star.  Following wind-driven mass loss, which further widens the system, the primary collapses into a black hole; here, this collapse is assumed to be complete, without an associated natal kick.  When, a few hundred thousand years later, the secondary reaches the end of its main sequence, the process repeats in reverse: the secondary expands until it commences mass transfer onto the primary.  By this time, the primary has lost around two thirds of its initial mass through a combination of envelope stripping, winds, and possible mass loss during a supernova.  Meanwhile, this mass transfer would need to be almost wholly non-conservative if the accretion onto the black hole obeys the Eddington limit.  Consequently, mass transfer would lead to a rapid hardening of the binary at a rate that is faster than the reduction in the size of the secondary donor on mass loss.  As a result, the more mass it donates, the more the donor overflows its Roche lobe.  This runaway process of dynamically unstable mass transfer leads to the formation of a common envelope of gas around the binary out of the donor's envelope; see \citet{Ivanova:2013} for a review.  The drag force on the black hole from the envelope leads to rapid spiral-in.   The dissipated orbital energy is deposited in the envelope, and may ultimately lead to the expulsion of the envelope.  The orbital energy is decreased by an amount necessary to unbind the envelope, and the resulting black hole -- Wolf-Rayet binary has a separation of only $\sim 35 R_\odot$ in this example.  Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black hole binary is formed.  While this entire process takes only a few million years after the formation the binary, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
+The evolution of this system is sketched out in an van den Heuvel -- style diagram in \autoref{fig:COMPAS}.  Two massive stars of perhaps $100$ and $75$ solar masses are born in a low-metallicity environment ($\sim 5\%$ of solar metallicity)  binary at a separation of $\sim 10$ AU.  The more massive primary reaches the end of its main sequence first.  At this stage, it has completed fusing hydrogen into helium in the core, and with the loss of energy input, the core begins to contract.  The release of gravitational binding energy and the onset of hydrogen shell burning cause the hydrogen-rich envelope to expand, until the primary expands past the L1 point and overflows its Roche Lobe, beginning to transfer mass onto the secondary.  The mass transfer proceeds on the thermal timescale of the primary donor and is likely significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate it is being donated.  The loss of mass from the binary further widens the system, to perhaps $\sim 20$ AU.  The primary loses its entire envelope, leaving behind a naked helium-burning star -- a Wolf-Rayet star.  Following wind-driven mass loss, which further widens the system, the primary collapses into a black hole; here, this collapse is assumed to be complete, without an associated natal kick.  When, a few hundred thousand years later, the secondary reaches the end of its main sequence, the process repeats in reverse: the secondary expands until it commences mass transfer onto the primary.  By this time, the primary has lost around two thirds of its initial mass through a combination of envelope stripping, winds, and possible mass loss during a supernova.  Meanwhile, this mass transfer would need to be almost wholly non-conservative if the accretion onto the black hole obeys the Eddington limit.  Consequently, mass transfer would lead to a rapid hardening of the binary at a rate that is faster than the reduction in the size of the secondary donor on mass loss.  As a result, the more mass it donates, the more the donor overflows its Roche lobe.  This runaway process of dynamically unstable mass transfer leads to the formation of a common envelope of gas around the binary out of the donor's envelope; see \citet{Ivanova:2013} for a review.  The drag force on the black hole from the envelope leads to rapid spiral-in.   The dissipated orbital energy is deposited in the envelope, and may ultimately lead to the expulsion of the envelope.  The orbital energy is decreased by an amount necessary to unbind the envelope, and the resulting black hole -- Wolf-Rayet binary has a separation of only $\sim 35 R_\odot$ in this example.  Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black hole binary is formed.  While this entire process takes only a few million years after the formation the binary, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
+
+\begin{figure}
+	\centering
+	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
+	\includegraphics[width=0.9\textwidth]{COMPAS.png}
+	\caption{\label{fig:COMPAS} A sketch of the possible evolutionary path of GW150914, following \citet{Stevenson:2017}.  The stars are born in a \todo{$Z=0.02 Z_\odot$} low-metallicity environment with an initial separation of $\sim 10$ AU.  The binary widens during non-conservative case B mass transfer from primary to secondary, but is hardened by two orders of magnitude as a result of dynamically unstable mass transfer from the expanding secondary onto the primary which has become a black hole.}
+\end{figure}
 
 Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as the luminous blue variable phase \citep{MennekensVanbeveren:2014} and its dependence on metallicity; the efficiency of stable mass transfer efficiency; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii}; common-envelope survival and the amount of binary hardening associated with the envelope ejection; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Repetto:2012,Mandel:2015kick}; the possible contribution of double-core common envelopes when unstable mass transfer is initiated between two evolved stars; and the role of dynamically stable non-conservative mass transfer onto a lower-mass compact donor in achieving sufficient binary hardening  \citep{vandenHeuvel:2016,Neijssel:2018}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
 
@@ -187,7 +215,7 @@ The prospects for dynamical formed merging binary black holes in globular cluste
 
 There are no known direct observations of binary black holes other than the sources observed by LIGO and Virgo through gravitational-wave emission (and a very speculative potential observation through microlensing \citep{microlensing}).  Therefore, beyond inference on the growing population of objects detected through gravitational waves, which we will return to in the next section, current knowledge of the merger rates and properties of binary black holes rests on modelling.  For the isolated binary evolution channel this typically takes the form of forward modelling of large populations of stellar binaries distributed according to the observed initial mass and separation distributions in order to estimate the yield of merging binary black holes; this approach is known as population synthesis modelling, and is described in \autoref{form}.  Population synthesis techniques have also been applied to specific observed systems composed of a black hole and a Wolf-Rayet star, such as Cygnus X-1 \citep{Bulik:2008} and Cygnus X-3 \citep{CygnusX3:2012}, but whose future evolution is still uncertain.  The rate predictions from population synthesis models produced prior to 2010 are summarized by \citet{ratesdoc}.  Here, rather than delving into the details of binary evolution, we will attempt to estimate the relevant rates and expectations for the parameters of merging binary black holes, including their masses, spins, and environments.
 
-In order to survive an evolutionary pathway such as the one depicted in \autoref{Fig:Stevenson}, a binary must (i) have the right masses to form two black holes; (ii) have the right separation to avoid a premature merger, yet be close enough to interact; (iii) avoid disruption by supernova kicks; (iv) engage in and survive a common envelope phase; and (v) end up sufficiently compact at binary black hole formation to merge within the age of the Universe.  
+In order to survive an evolutionary pathway such as the one depicted in \autoref{fig:COMPAS}, a binary must (i) have the right masses to form two black holes; (ii) have the right separation to avoid a premature merger, yet be close enough to interact; (iii) avoid disruption by supernova kicks; (iv) engage in and survive a common envelope phase; and (v) end up sufficiently compact at binary black hole formation to merge within the age of the Universe.  
 
 The minimal initial stellar mass for forming a black hole is probably around 20 solar masses, so around $f_\textrm{primary} \approx 0.1\%$ of all stars drawn from the \cite{Kroupa:2002} initial mass function will form black holes. Although this can be shifted somewhat by binary interactions, for the purpose of this back-of-the-envelope calculation, we will use this approximation. Meanwhile, assuming that the mass ratio between the primary and the secondary is roughly uniformly distributed \citep{Sana:2012}, typically half the secondaries will fall into the mass range of interest, $f_\textrm{secondary} \approx 0.5$.  
 
@@ -195,7 +223,7 @@ The initial binary separations are observed distributed uniformly in the logarit
 
 The fraction of binaries that initiate and survive the common envelope phase during mass transfer from the secondary to the primary is perhaps the least certain.  Typically, it is easier to initiate a common envelope if the mass ratio of the donor to the accretor is greater, and when the donor begins mass transfer earlier in its post-main-sequence evolution.  The accreting black hole in this case may only have a third of the initial mass of the primary, with the rest lost with the envelope and through winds, while the secondary donor may have increased its mass during the first mass transfer phase; even so, unless the secondary was initially close to the primary in mass, the mass ratio is unlikely to exceed $3:1$, which is probably close to the threshold for initiating a common envelope phase.  At the same time, while an early onset of mass transfer means that the less evolved donor does not shrink as much in response to mass transfer (making mass transfer stable), it cannot have an envelope that is too tightly bound, otherwise the orbital energy is insufficient to eject it.  Together, these constraints reduce the fraction of successful common envelope initiations and ejections to $f_\textrm{CE} \approx 0.1$.  
 
-Finally, there is the question of final separation at second black hole formation, as only systems with separations smaller than those in \autoref{Fig:periapsis} will merge in the age of the Universe.  The final separation after the common envelope ejection is set by the binding energy of the envelope at the time when the secondary initiates unstable mass transfer, which in turn depends on the binary separation at that time.  Therefore, very crudely, the flat-in-the-log distribution of initial binary separations persists to the final binary separation.  Since the delay time between formation and merger $\tau_\textrm{GW} \propto a^4$ is a power law in the separation, the delay time distribution also follows a flat-in-the-log distribution $p(\tau) \propto 1/\tau$.  Among the binaries that survive a common envelope the closest will be those whose separations just barely encompass a Wolf-Rayet star, i.e., with separations of a few solar radii (and merger times of a few million years).  The logarithmic distribution ensures that tens of percent of binaries that survive a common envelope will merge in the age of the Universe, $f_\textrm{merge} \approx 0.2$.
+Finally, there is the question of final separation at second black hole formation, as only systems with separations smaller than those in \autoref{fig:periapsis} will merge in the age of the Universe.  The final separation after the common envelope ejection is set by the binding energy of the envelope at the time when the secondary initiates unstable mass transfer, which in turn depends on the binary separation at that time.  Therefore, very crudely, the flat-in-the-log distribution of initial binary separations persists to the final binary separation.  Since the delay time between formation and merger $\tau_\textrm{GW} \propto a^4$ is a power law in the separation, the delay time distribution also follows a flat-in-the-log distribution $p(\tau) \propto 1/\tau$.  Among the binaries that survive a common envelope the closest will be those whose separations just barely encompass a Wolf-Rayet star, i.e., with separations of a few solar radii (and merger times of a few million years).  The logarithmic distribution ensures that tens of percent of binaries that survive a common envelope will merge in the age of the Universe, $f_\textrm{merge} \approx 0.2$.
 
 Thus, we can write down a Drake equation for the probability that a stellar binary will end its life as a merging binary black hole:
 \begin{eqnarray}
