Committed missing references.

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -428,6 +428,22 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Kalogera:2007,
+   author = {{Kalogera}, V. and {Belczynski}, K. and {Kim}, C. and {O'Shaughnessy}, R. and 
+	{Willems}, B.},
+    title = "{Formation of double compact objects}",
+  journal = {\physrep},
+   eprint = {astro-ph/0612144},
+     year = 2007,
+    month = apr,
+   volume = 442,
+    pages = {75-108},
+      doi = {10.1016/j.physrep.2007.02.008},
+   adsurl = {http://adsabs.harvard.edu/abs/2007PhR...442...75K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 @Article{Kalogera:2000dz,
      author    = "Kalogera, V. and Narayan, R. and Spergel, D. N. and Taylor,
@@ -1241,6 +1257,7 @@ Sigg and Michael Zucker",
    adsurl = {http://adsabs.harvard.edu/cgi-bin/nph-bib_query?bibcode=1995ApJ...440..270B&db_key=AST},
   adsnote = {Provided by the Smithsonian/NASA Astrophysics Data System}
 }
+
 @Article{Kalogera:2004tn,
      author    = {{Kalogera}, V. and {Kim}, C. and {Lorimer}, D.~R. and {Burgay}, M. and 
 	{D'Amico}, N. and {Possenti}, A. and {Manchester}, R.~N. and 
@@ -8001,16 +8018,19 @@ archivePrefix = "arXiv",
 
 @ARTICLE{Belczynski:2009,
    author = {{Belczynski}, K. and {Bulik}, T. and {Fryer}, C.~L. and {Ruiter}, A. and 
-	{Vink}, J.~S. and {Hurley}, J.~R.},
-    title = "{On The Maximum Mass of Stellar Black Holes}",
-  journal = {ArXiv e-prints},
+	{Valsecchi}, F. and {Vink}, J.~S. and {Hurley}, J.~R.},
+    title = "{On the Maximum Mass of Stellar Black Holes}",
+  journal = {\apj},
 archivePrefix = "arXiv",
    eprint = {0904.2784},
-   note = {0904.2784},
- keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
-     year = 2009,
-    month = apr,
-   adsurl = {http://adsabs.harvard.edu/abs/2009arXiv0904.2784B},
+ primaryClass = "astro-ph.SR",
+ keywords = {binaries: close, black hole physics, gravitational waves, stars: evolution, stars: neutron},
+     year = 2010,
+    month = may,
+   volume = 714,
+    pages = {1217-1226},
+      doi = {10.1088/0004-637X/714/2/1217},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...714.1217B},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -16895,7 +16915,7 @@ archivePrefix = "arXiv",
 }
 
 
-@ARTICLE{Laycock:2015MNRAS,
+@ARTICLE{Laycock:2015,
    author = {{Laycock}, S.~G.~T. and {Maccarone}, T.~J. and {Christodoulou}, D.~M.
 	},
     title = "{Revisiting the dynamical case for a massive black hole in IC10 X-1}",
@@ -19595,8 +19615,362 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@Misc{WenPhinney:2018,
-     author    = {{Wen}, L. and {Phinney}, E.S.},
+
+@ARTICLE{GW170608,
+   author = {{Abbott}, B.~P. and {Abbott}, R. and {Abbott}, T.~D. and {Acernese}, F. and 
+	{Ackley}, K. and {Adams}, C. and {Adams}, T. and {Addesso}, P. and 
+	{Adhikari}, R.~X. and {Adya}, V.~B. and et al.},
+    title = "{GW170608: Observation of a 19 Solar-mass Binary Black Hole Coalescence}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1711.05578},
+ primaryClass = "astro-ph.HE",
+ keywords = {binaries: general, gravitational waves, stars: black holes },
+     year = 2017,
+    month = dec,
+   volume = 851,
+      eid = {L35},
+    pages = {L35},
+      doi = {10.3847/2041-8213/aa9f0c},
+   adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...851L..35A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{GW170814,
+   author = {{Abbott}, B.~P. and {Abbott}, R. and {Abbott}, T.~D. and {Acernese}, F. and 
+	{Ackley}, K. and {Adams}, C. and {Adams}, T. and {Addesso}, P. and 
+	{Adhikari}, R.~X. and {Adya}, V.~B. and et al.},
+    title = "{GW170814: A Three-Detector Observation of Gravitational Waves from a Binary Black Hole Coalescence}",
+  journal = {Physical Review Letters},
+archivePrefix = "arXiv",
+   eprint = {1709.09660},
+ primaryClass = "gr-qc",
+     year = 2017,
+    month = oct,
+   volume = 119,
+   number = 14,
+      eid = {141101},
+    pages = {141101},
+      doi = {10.1103/PhysRevLett.119.141101},
+   adsurl = {http://adsabs.harvard.edu/abs/2017PhRvL.119n1101A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Dai:2017,
+   author = {{Dai}, L. and {McKinney}, J.~C. and {Miller}, M.~C.},
+    title = "{Energetic constraints on electromagnetic signals from double black hole mergers}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1611.00764},
+ primaryClass = "astro-ph.HE",
+ keywords = {black hole physics, gravitational waves, neutrinos, stars: black holes, gamma-ray burst: general, supernovae: general},
+     year = 2017,
+    month = sep,
+   volume = 470,
+    pages = {L92-L96},
+      doi = {10.1093/mnrasl/slx086},
+   adsurl = {http://adsabs.harvard.edu/abs/2017MNRAS.470L..92D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Woosley:2016,
+   author = {{Woosley}, S.~E.},
+    title = "{The Progenitor of GW150914}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1603.00511},
+ primaryClass = "astro-ph.HE",
+ keywords = {gamma-ray burst: general, gravitational waves, stars: black holes, supernovae: general},
+     year = 2016,
+    month = jun,
+   volume = 824,
+      eid = {L10},
+    pages = {L10},
+      doi = {10.3847/2041-8205/824/1/L10},
+   adsurl = {http://adsabs.harvard.edu/abs/2016ApJ...824L..10W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Kruckow:2018,
+   author = {{Kruckow}, M.~U. and {Tauris}, T.~M. and {Langer}, N. and {Kramer}, M. and 
+	{Izzard}, R.~G.},
+    title = "{Progenitors of gravitational wave mergers: Binary evolution with the stellar grid based code ComBinE}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1801.05433},
+ primaryClass = "astro-ph.SR",
+ keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+     year = 2018,
+    month = jan,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180105433K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Kulkarni:1993,
+   author = {{Kulkarni}, S.~R. and {Hut}, P. and {McMillan}, S.},
+    title = "{Stellar black holes in globular clusters}",
+  journal = {\nat},
+ keywords = {Black Holes (Astronomy), Globular Clusters, Neutron Stars, X Ray Binaries, Stellar Cores, Stellar Mass Accretion, X Ray Spectra},
+     year = 1993,
+    month = jul,
+   volume = 364,
+    pages = {421-423},
+      doi = {10.1038/364421a0},
+   adsurl = {http://adsabs.harvard.edu/abs/1993Natur.364..421K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Heger:2000,
+   author = {{Heger}, A. and {Langer}, N. and {Woosley}, S.~E.},
+    title = "{Presupernova Evolution of Rotating Massive Stars. I. Numerical Method and Evolution of the Internal Stellar Structure}",
+  journal = {\apj},
+   eprint = {astro-ph/9904132},
+ keywords = {HYDRODYNAMICS, METHODS: NUMERICAL, STARS EARLY-TYPE, STARS: EVOLUTION, STARS: INTERIORS, STARS ROTATION, Hydrodynamics, Methods: Numerical, stars early-type, Stars: Evolution, Stars: Interiors, stars rotation},
+     year = 2000,
+    month = jan,
+   volume = 528,
+    pages = {368-396},
+      doi = {10.1086/308158},
+   adsurl = {http://adsabs.harvard.edu/abs/2000ApJ...528..368H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Yoon:2006,
+   author = {{Yoon}, S.-C. and {Langer}, N. and {Norman}, C.},
+    title = "{Single star progenitors of long gamma-ray bursts. I. Model grids and redshift dependent GRB rate}",
+  journal = {\aap},
+   eprint = {astro-ph/0606637},
+ keywords = {stars: evolution, stars: rotation, supernovae: general, gamma rays: bursts},
+     year = 2006,
+    month = dec,
+   volume = 460,
+    pages = {199-208},
+      doi = {10.1051/0004-6361:20065912},
+   adsurl = {http://adsabs.harvard.edu/abs/2006A%26A...460..199Y},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{deMink:2009,
+   author = {{de Mink}, S.~E. and {Cantiello}, M. and {Langer}, N. and {Pols}, O.~R. and 
+	{Brott}, I. and {Yoon}, S.-C.},
+    title = "{Rotational mixing in massive binaries. Detached short-period systems}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {0902.1751},
+ primaryClass = "astro-ph.SR",
+ keywords = {binaries: close, stars: rotation, stars: abundances, Magellanic Clouds, stars: Wolf-Rayet, X-rays: binaries},
+     year = 2009,
+    month = apr,
+   volume = 497,
+    pages = {243-253},
+      doi = {10.1051/0004-6361/200811439},
+   adsurl = {http://adsabs.harvard.edu/abs/2009A%26A...497..243D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{EndalSofia:1978,
+   author = {{Endal}, A.~S. and {Sofia}, S.},
+    title = "{The evolution of rotating stars. II - Calculations with time-dependent redistribution of angular momentum for 7- and 10-solar-mass stars}",
+  journal = {\apj},
+ keywords = {Angular Momentum, Chemical Composition, Momentum Transfer, Stellar Evolution, Stellar Rotation, Time Dependence, Angular Velocity, Carbon, Convection, Eddington Approximation, Gravitational Collapse, Main Sequence Stars, Radial Velocity, Secular Variations, Stellar Models, Thermal Instability},
+     year = 1978,
+    month = feb,
+   volume = 220,
+    pages = {279-290},
+      doi = {10.1086/155904},
+   adsurl = {http://adsabs.harvard.edu/abs/1978ApJ...220..279E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Sweet:1950,
+   author = {{Sweet}, P.~A.},
+    title = "{The importance of rotation in stellar evolution}",
+  journal = {\mnras},
+     year = 1950,
+   volume = 110,
+    pages = {548},
+      doi = {10.1093/mnras/110.6.548},
+   adsurl = {http://adsabs.harvard.edu/abs/1950MNRAS.110..548S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Eddington:1925,
+   author = {{Eddington}, A.~S.},
+    title = "{Circulating currents in rotating stars}",
+  journal = {The Observatory},
+     year = 1925,
+    month = mar,
+   volume = 48,
+    pages = {73-75},
+   adsurl = {http://adsabs.harvard.edu/abs/1925Obs....48...73E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Pavlovskii:2017,
+   author = {{Pavlovskii}, K. and {Ivanova}, N. and {Belczynski}, K. and 
+	{Van}, K.~X.},
+    title = "{Stability of mass transfer from massive giants: double black hole binary formation and ultraluminous X-ray sources}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1606.04921},
+ primaryClass = "astro-ph.HE",
+ keywords = {gravitational waves, binaries: close, stars: black holes, stars: massive, X-rays: binaries},
+     year = 2017,
+    month = feb,
+   volume = 465,
+    pages = {2092-2100},
+      doi = {10.1093/mnras/stw2786},
+   adsurl = {http://adsabs.harvard.edu/abs/2017MNRAS.465.2092P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{MaederMeynet:2000,
+   author = {{Maeder}, A. and {Meynet}, G.},
+    title = "{The Evolution of Rotating Stars}",
+  journal = {\araa},
+   eprint = {astro-ph/0004204},
+ keywords = {STELLAR ROTATION, STELLAR EVOLUTION, MASS LOSS, MIXING, CHEMICAL ABUNDANCES},
+     year = 2000,
+   volume = 38,
+    pages = {143-190},
+      doi = {10.1146/annurev.astro.38.1.143},
+   adsurl = {http://adsabs.harvard.edu/abs/2000ARA%26A..38..143M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{BetheBrown:1998,
+   author = {{Bethe}, H.~A. and {Brown}, G.~E.},
+    title = "{Evolution of Binary Compact Objects That Merge}",
+  journal = {\apj},
+   eprint = {astro-ph/9802084},
+ keywords = {STARS: BINARIES: CLOSE, BLACK HOLE PHYSICS, GRAVITATION, STARS: INTERIORS, STARS: NEUTRON, STARS: STATISTICS, Stars: Binaries: Close, Black Hole Physics, Gravitation, Stars: Interiors, Stars: Neutron, Stars: Statistics},
+     year = 1998,
+    month = oct,
+   volume = 506,
+    pages = {780-789},
+      doi = {10.1086/306265},
+   adsurl = {http://adsabs.harvard.edu/abs/1998ApJ...506..780B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Cardoso:2018,
+   author = {{Cardoso}, V. and {Ikeda}, T. and {Moore}, C.~J. and {Yoo}, C.-M.
+	},
+    title = "{On The Maximum Luminosity}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1803.03271},
+ primaryClass = "gr-qc",
+ keywords = {General Relativity and Quantum Cosmology},
+     year = 2018,
+    month = mar,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180303271C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@Misc{VignaGomez:2018,
+     author    = {{Vigna-G{\'o}mez}, A. and others},
+     title     = "Binary Compact Object Coalescence Rates: Nearby Universe",
      year      = 2018,
      note      = "In preparation"
 }
+
+@Misc{Neijssel:2018,
+     author    = {{Neijssel}, C.~J. and others},
+     title     = "The effect of metallicity-specific star formation history on the formation and detection of binary mergers",
+     year      = 2018,
+     note      = "In preparation"
+}
+
+@ARTICLE{Dong:2007,
+   author = {{Dong}, S. and {Udalski}, A. and {Gould}, A. and {Reach}, W.~T. and 
+	{Christie}, G.~W. and {Boden}, A.~F. and {Bennett}, D.~P. and 
+	{Fazio}, G. and {Griest}, K. and {Szyma{\'n}ski}, M.~K. and 
+	{Kubiak}, M. and {Soszy{\'n}ski}, I. and {Pietrzy{\'n}ski}, G. and 
+	{Szewczyk}, O. and {Wyrzykowski}, {\L}. and {Ulaczyk}, K. and 
+	{Wieckowski}, T. and {Paczy{\'n}ski}, B. and {DePoy}, D.~L. and 
+	{Pogge}, R.~W. and {Preston}, G.~W. and {Thompson}, I.~B. and 
+	{Patten}, B.~M.},
+    title = "{First Space-Based Microlens Parallax Measurement: Spitzer Observations of OGLE-2005-SMC-001}",
+  journal = {\apj},
+   eprint = {astro-ph/0702240},
+ keywords = {Cosmology: Dark Matter, Galaxies: Stellar Content, Cosmology: Gravitational Lensing},
+     year = 2007,
+    month = aug,
+   volume = 664,
+    pages = {862-878},
+      doi = {10.1086/518536},
+   adsurl = {http://adsabs.harvard.edu/abs/2007ApJ...664..862D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Podsiadlowski:2003,
+   author = {{Podsiadlowski}, P. and {Rappaport}, S. and {Han}, Z.},
+    title = "{On the formation and evolution of black hole binaries}",
+  journal = {\mnras},
+   eprint = {astro-ph/0207153},
+ keywords = {black hole physics, gravitation, binaries: close, stars: individual: Cygnus X-1, stars: individual: GRS 1915+105, X-rays: stars},
+     year = 2003,
+    month = may,
+   volume = 341,
+    pages = {385-404},
+      doi = {10.1046/j.1365-8711.2003.06464.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2003MNRAS.341..385P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fragos:2015,
+   author = {{Fragos}, T. and {McClintock}, J.~E.},
+    title = "{The Origin of Black Hole Spin in Galactic Low-mass X-Ray Binaries}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1408.2661},
+ primaryClass = "astro-ph.HE",
+ keywords = {binaries: close, black hole physics, Galaxy: stellar content, stars: black holes, stars: evolution, X-rays: binaries},
+     year = 2015,
+    month = feb,
+   volume = 800,
+      eid = {17},
+    pages = {17},
+      doi = {10.1088/0004-637X/800/1/17},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...800...17F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{KingKolb:1999,
+   author = {{King}, A.~R. and {Kolb}, U.},
+    title = "{The evolution of black hole mass and angular momentum}",
+  journal = {\mnras},
+   eprint = {astro-ph/9901296},
+ keywords = {BLACK HOLE PHYSICS, BINARIES: CLOSE, STARS: INDIVIDUAL: GRO J1655: 40, STARS: INDIVIDUAL: GRS 1915 + 105, STARS: INDIVIDUAL: SS433, X-RAYS: STARS},
+     year = 1999,
+    month = may,
+   volume = 305,
+    pages = {654-660},
+      doi = {10.1046/j.1365-8711.1999.02482.x},
+   adsurl = {http://adsabs.harvard.edu/abs/1999MNRAS.305..654K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Albrecht:2014,
+   author = {{Albrecht}, S. and {Winn}, J.~N. and {Torres}, G. and {Fabrycky}, D.~C. and 
+	{Setiawan}, J. and {Gillon}, M. and {Jehin}, E. and {Triaud}, A. and 
+	{Queloz}, D. and {Snellen}, I. and {Eggleton}, P.},
+    title = "{The BANANA Project. V. Misaligned and Precessing Stellar Rotation Axes in CV Velorum}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1403.0583},
+ primaryClass = "astro-ph.SR",
+ keywords = {binaries: eclipsing, stars: early-type, stars: formation, stars: individual: CV Velorum DI Herculis EP Crucis, stars: kinematics and dynamics, stars: rotation, techniques: spectroscopic},
+     year = 2014,
+    month = apr,
+   volume = 785,
+      eid = {83},
+    pages = {83},
+      doi = {10.1088/0004-637X/785/2/83},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...785...83A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
