Adding new version of Figure 1.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -112,8 +112,8 @@ GW150914 has the heaviest black holes, allowing the total mass $M \equiv M_1 + M
 \begin{figure}
 	\centering
 	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
-	\includegraphics[width=0.7\textwidth]{BHmass.png}
-	\caption{\label{fig:BHmasses} \todo{Placeholder for future figure showing the masses of black holes observed as gravitational-wave sources and XRBs, with error bars computed from partially available LIGO posteriors and from \citep{Farr:2011}.  Cite in text.}}
+	\includegraphics[width=0.99\textwidth]{Graveyard-linear.png}%{BHmass.png}
+	\caption{\label{fig:BHmasses} \todo{Placeholder for future figure showing the masses of black holes observed as gravitational-wave sources and XRBs, with error bars computed from partially available LIGO posteriors and from \citep{Farr:2011}.  Cite in text.} Figure courtesy of Frank Elavsky, Northwestern University.}
 \end{figure}
 
 Individual black hole spins are difficult to measure precisely with gravitational waves.  However, we do know that none of the observed binaries could have large spins aligned with the orbital angular momentum; in fact the averaged dimensionless spin in the direction of the orbital angular momentum is below $0.4$ for all three events, and consistent with zero for GW150914 and LVT151012.  Interestingly, it is not consistent with zero for GW151226, the lightest binary black hole detected, indicating that at least one of the components for that event must have been a rotating Kerr black hole.  Spin projections in the orbital plane are very poorly constrained for all three events.
